<resources>
    <string name="app_name">App Autentica</string>
    <string name="log_in">Log In</string>
    <string name="titulo_janela">Say hello to your new app</string>
    <string name="password">Password</string>
    <string name="e_mail_or_phone_number">E-mail or phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_password">Re-Password</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="todo">TODO</string>
    <string name="full_name">Full name</string>
    <string name="create_a_new_account">Create a new account</string>
</resources>