<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CriarConta_Activity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_voltar"
            android:contentDescription="@string/todo" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/corBotao"
        android:textSize="@dimen/titulo"
        android:textStyle="bold"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText

            android:id="@+id/txtFullName"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_sem_preenchimento"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="@dimen/paddingEditText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_sem_preenchimento"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="@dimen/paddingEditText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtEmailAddress"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_sem_preenchimento"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/paddingEditText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtCrPassword"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_sem_preenchimento"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/paddingEditText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtRePassword"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_sem_preenchimento"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:padding="@dimen/paddingEditText"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnCrSignUp"
            android:layout_width="@dimen/largura"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/botao_preenchido"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/corFonteBranca" />
    </LinearLayout>

</LinearLayout>